# hellow

New folder (2)/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client_patterns.yaml  pyproject.toml
New folder (2)/.github/workflows/: ci.yml
New folder (2)/docs/: ARCHITECTURE.md  INSTALLATION.md  SECURITY.md  USAGE.md
New folder (2)/samples/reports/: sample_scan_report.json  sample_scan_report.md
New folder (2)/src/devsecops/: __init__.py  __main__.py  orchestrator.py
New folder (2)/src/devsecops/cli/: __init__.py  main.py
New folder (2)/src/devsecops/core/: __init__.py  config.py  console.py  fingerprint.py  git_analyzer.py  models.py  storage.py
New folder (2)/src/devsecops/hooks/: __init__.py  installer.py
New folder (2)/src/devsecops/llm/: __init__.py  gating.py  providers.py  validator.py
New folder (2)/src/devsecops/reporting/: __init__.py  reporter.py
New folder (2)/src/devsecops/scanners/: __init__.py  base.py  client_scanner.py  code_smell_scanner.py  dependency_scanner.py  misconfig_scanner.py  pii_scanner.py  secret_scanner.py  vulnerability_scanner.py
New folder (2)/templates/: config.yaml
New folder (2)/tests/: ex.py
New folder (2)/tests/integration/: test_llm_impact.py  test_scan_workflow.py
New folder (2)/tests/unit/: test_env_loading.py  test_fingerprint.py  test_llm_gating.py  test_pii_scanner.py  test_secret_scanner.py  test_storage.py  test_vulnerability_scanner.py
