[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devsecops-guardian"
version = "1.0.0"
description = "Enterprise DevSecOps Pre-Commit Guardian — security gatekeeper for Git commits"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "DevSecOps Team" }]
keywords = ["devsecops", "pre-commit", "security", "secrets", "sast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "gitpython>=3.1.40",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "google-generativeai>=0.8.0",
    "groq>=0.11.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[project.scripts]
devsecops = "devsecops.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
